--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ table {
 /* Start Here */
 
 body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 15px;
     margin: 5px;
 }
@@ -162,7 +163,11 @@ header {
 #messageArea {
     flex-grow: 1;
     background-color: rgba(196, 196, 196, 0.445);
+    text-align: center;
+    text-transform: capitalize;
     height: 100px;
+    padding: 15px;
+    margin: 15px;
 }
 
 #board {
@@ -182,11 +187,11 @@ header {
 }
 
 .disc {
-    align-self: flex-start;
     width: 50px;
     height: 50px;
     margin: 0 auto;
     border-radius: 50%;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.466);
 }
 
 .disc.red {
