--- a/css/style.css
+++ b/css/style.css
@@ -196,9 +196,10 @@ header {
 
 .disc.red {
     background-color: red;
-    margin: 15px;
+    margin: 15px 0;
 }
 
 .disc.black {
     background-color: black;
+        margin: 15px 0;
 }
