--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ header {
     justify-content: center;
     background-color: rgb(255, 255, 255);
     height: 400px;
+    transform: rotate(180deg)
 }
 
 .col {
