--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,10 @@ header {
 }
 
 #messageArea {
+    display: flex;
     flex-grow: 1;
+    justify-content: center;
+    align-items: center;
     background-color: rgba(196, 196, 196, 0.445);
     text-align: center;
     text-transform: capitalize;
@@ -169,6 +172,11 @@ header {
     padding: 15px;
     margin: 15px;
 }
+
+#messageArea p {
+    font-size: xx-large;
+}
+
 
 #board {
     display: flex;
@@ -203,4 +211,24 @@ header {
 .disc.black {
     background-color: black;
     margin-bottom: 15px;
+}
+
+/* Animations */
+
+@keyframes zoomInDown {
+    from {
+        opacity: 0;
+        transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -1000px, 0);
+        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    }
+
+    60% {
+        opacity: 1;
+        transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
+        animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
+    }
+}
+
+.zoomInDown {
+    animation-name: zoomInDown;
 }
