Added player area to js and css. Added congrats message to winner in current player area.

--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,24 @@ header {
     border: 1px solid;
 }
 
+#playerArea {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(196, 196, 196, 0.445);
+    text-align: center;
+    text-transform: capitalize;
+    height: 10px;
+    padding: 15px;
+    margin: 5px 15px;
+}
+
+#playerArea p {
+    font-size: medium;
+}
+
+
 #messageArea {
     display: flex;
     flex-grow: 1;
@@ -170,11 +188,11 @@ header {
     text-transform: capitalize;
     height: 100px;
     padding: 15px;
-    margin: 15px;
+    margin: 0 15px;
 }
 
 #messageArea p {
-    font-size: xx-large;
+    font-size: x-large;
 }
 
 
@@ -183,9 +201,11 @@ header {
     flex-flow: row nowrap;
     flex-grow: 1;
     justify-content: center;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(182, 182, 182);
     height: 400px;
-    transform: rotate(180deg)
+    margin: 5px 15px;
+    border: 1px solid;
+    transform: rotate(180deg);
 }
 
 .col {
@@ -211,24 +231,4 @@ header {
 .disc.black {
     background-color: black;
     margin-bottom: 15px;
-}
-
-/* Animations */
-
-@keyframes zoomInDown {
-    from {
-        opacity: 0;
-        transform: scale3d(0.1, 0.1, 0.1) translate3d(0, -1000px, 0);
-        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-    }
-
-    60% {
-        opacity: 1;
-        transform: scale3d(0.475, 0.475, 0.475) translate3d(0, 60px, 0);
-        animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
-    }
-}
-
-.zoomInDown {
-    animation-name: zoomInDown;
 }
